--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,10 @@ phases:
     commands:
        - echo "testing" >&1
        - echo "memes" >&2
-       - echo "testing cats" > /dev/null
+       - echo "testing cats" >/dev/null
+       - echo "testing cats" >/dev/stdout
        - echo "testing non redirect"
        - echo memes > test
        - cat test >&1
+       - cat test >/dev/stdout
+       - cat test >/dev/null
