--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,14 +3,16 @@ version: 0.2
 phases:
   build:
     commands:
-       - echo "testing" >&1
-       - echo "memes" >&2
-       - echo "testing cats" > /dev/null
-       - echo "testing cats" > /dev/stdout
+       - echo "testing to >&1" >&1
+       - echo "testing to >&2" >&2
+       - echo "testing to /dev/null" > /dev/null
+       - echo "testing to /dev/stdout" > /dev/stdout
        - echo "testing non redirect"
-       - echo "memes" > test
+       - echo "test >&1 from file" > test
        - cat test >&1
+       - echo "test /dev/stdout from file" > test
        - cat test > /dev/stdout
+       - echo "test /dev/null from file" > test
        - cat test > /dev/null
   post_build:
     commands:
