commented out `echo "testing to /dev/stdout" > /dev/stdout`

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
        - echo "testing to >&1" >&1
        - echo "testing to >&2" >&2
        - echo "testing to /dev/null" > /dev/null
-       - echo "testing to /dev/stdout" > /dev/stdout
+       # - echo "testing to /dev/stdout" > /dev/stdout
        - echo "testing non redirect"
        - echo "test >&1 from file" > test
        - cat test >&1
