--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   build:
     commands:
        - echo "testing to >&1" >&1
-       - echo "testing to >&2" >&2
+       # - echo "testing to >&2" >&2
        # - echo "testing to /dev/null" > /dev/null
        # - echo "testing to /dev/stdout" > /dev/stdout
        - echo "testing non redirect"
