--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,8 +8,8 @@ phases:
        # - echo "testing to /dev/null" > /dev/null
        # - echo "testing to /dev/stdout" > /dev/stdout
        - echo "testing non redirect"
-       # - echo "test >&1 from file" > test
-       # - cat test >&1
+       - echo "test >&1 from file" > test
+       - cat test >&1
        # - echo "test /dev/stdout from file" > test
        # - cat test > /dev/stdout
        # - echo "test /dev/null from file" > test
